k8s/3-tier-app/bd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: node:18
        command: ["sh","-c"]
        args: ["node server.js"]
        ports:
        - containerPort: 3000
