k8s/3-tier-app/fd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fd-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fd-app 
  template:
    metadata:
      labels:
        app: fd-app 
    spec:
      containers: 
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
