k8s/3-tier-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dev
spec:
  selector: 
    app: frontend-app  
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
spec:
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP



---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dev
spec:
  selector:
    app: db-app
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
